feat(article): ajout du plugin froala pour les wysiwyg

--- a/src/main/webapp/app/entities/international-article/international-article-detail.component.html
+++ b/src/main/webapp/app/entities/international-article/international-article-detail.component.html
@@ -10,7 +10,7 @@
         </dd>
         <dt><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.content">Content</span></dt>
         <dd>
-            <span>{{internationalArticle.content}}</span>
+            <span [innerHTML]="internationalArticle.content | safeHtml"></span>
         </dd>
         <dt><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.language">Language</span></dt>
         <dd>
