--- a/src/main/webapp/content/css/vendor.css
+++ b/src/main/webapp/content/css/vendor.css
@@ -2,3 +2,8 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~font-awesome/css/font-awesome.css';
 
+@import '~froala-editor/css/froala_editor.pkgd.min.css';
+@import '~font-awesome/css/font-awesome.min.css';
+@import '~froala-editor/css/froala_style.min.css';
+
+@import './modal.css'
