feat(entity): generation de l'entity Theme

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -22,6 +22,16 @@
             </div>
         </div>
 
+        <p jhiTranslate="home.hopiestra.question">
+            If you have any question on Hopiestra Web Site:
+        </p>
+
+        <ul>
+            <li><a href="https://github.com/rfevre/HopiestraWebSite" target="_blank" rel="noopener" jhiTranslate="home.hopiestra.link.github">Source</a></li>
+            <li><a href="https://docs.google.com/document/d/1kUQV2BbZCcF6Zw-Cs63mU6gxIkqHMSTwOSLfXQ88w9s/edit" target="_blank" rel="noopener" jhiTranslate="home.hopiestra.link.specifications">Specifications</a></li>
+            <li><a href="https://www.draw.io/?state=%7B%22ids%22:%5B%221uFZkIrpQs3vFABk-Y51F9v75MVzzLZ0_%22%5D,%22action%22:%22open%22,%22userId%22:%22106489761501305778601%22%7D#G1uFZkIrpQs3vFABk-Y51F9v75MVzzLZ0_" target="_blank" rel="noopener" jhiTranslate="home.hopiestra.link.uml">UML</a></li>
+        </ul>
+
         <p jhiTranslate="home.question">
             If you have any question on JHipster:
         </p>
