--- a/src/main/webapp/app/entities/international-article/international-article-dialog.component.html
+++ b/src/main/webapp/app/entities/international-article/international-article-dialog.component.html
@@ -25,13 +25,12 @@
         </div>
         <div class="form-group">
             <label class="form-control-label" jhiTranslate="hopiestraWebSiteApp.internationalArticle.content" for="field_content">Content</label>
-            <div [froalaEditor] class="form-control" name="content" id="field_content"  [(ngModel)]="internationalArticle.content" required>
-                Hello, Froala!
-            </div>
+            <textarea class="form-control" name="content" id="field_content"
+                [(ngModel)]="internationalArticle.content" required></textarea>
             <div [hidden]="!(editForm.controls.content?.dirty && editForm.controls.content?.invalid)">
                 <small class="form-text text-danger"
-                    [hidden]="!editForm.controls.content?.errors?.required" jhiTranslate="entity.validation.required">
-                    This field is required.
+                   [hidden]="!editForm.controls.content?.errors?.required" jhiTranslate="entity.validation.required">
+                   This field is required.
                 </small>
             </div>
         </div>
@@ -54,6 +53,19 @@
             <select class="form-control" id="field_tags" multiple name="tags" [(ngModel)]="internationalArticle.tags">
                 <option [ngValue]="getSelected(internationalArticle.tags, tagOption)" *ngFor="let tagOption of tags; trackBy: trackTagById">{{tagOption.name}}</option>
             </select>
+        </div>
+        <div class="form-group">
+            <label class="form-control-label" jhiTranslate="hopiestraWebSiteApp.internationalArticle.article" for="field_article">Article</label>
+            <select class="form-control" id="field_article" name="article" [(ngModel)]="internationalArticle.article"  required>
+                <option *ngIf="!editForm.value.article" [ngValue]="null" selected></option>
+                <option [ngValue]="articleOption.id === internationalArticle.article?.id ? internationalArticle.article : articleOption" *ngFor="let articleOption of articles; trackBy: trackArticleById">{{articleOption.id}}</option>
+            </select>
+        </div>
+        <div [hidden]="!(editForm.controls.article?.dirty && editForm.controls.article?.invalid)">
+            <small class="form-text text-danger"
+                [hidden]="!editForm.controls.article?.errors?.required" jhiTranslate="entity.validation.required">
+                This field is required.
+            </small>
         </div>
     </div>
     <div class="modal-footer">
