--- a/src/main/webapp/app/entities/international-article/international-article.component.html
+++ b/src/main/webapp/app/entities/international-article/international-article.component.html
@@ -20,6 +20,7 @@
             <th jhiSortBy="title"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.title">Title</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="content"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.content">Content</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="language.name"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.language">Language</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="article.id"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.article">Article</span> <span class="fa fa-sort"></span></th>
             <th></th>
             </tr>
             </thead>
@@ -31,6 +32,11 @@
                 <td>
                     <div *ngIf="internationalArticle.language">
                         <a [routerLink]="['../language', internationalArticle.language?.id ]" >{{internationalArticle.language?.name}}</a>
+                    </div>
+                </td>
+                <td>
+                    <div *ngIf="internationalArticle.article">
+                        <a [routerLink]="['../article', internationalArticle.article?.id ]" >{{internationalArticle.article?.id}}</a>
                     </div>
                 </td>
                 <td class="text-right">
@@ -72,4 +78,3 @@
         </div>
     </div>
 </div>
-
