update(Article): MaJ de l'entite Article et de l'affichage de la liaison avec celle-ci sur l'ihm dans l'internationalArticle

--- a/src/main/webapp/app/entities/article/article-detail.component.html
+++ b/src/main/webapp/app/entities/article/article-detail.component.html
@@ -29,6 +29,10 @@
         <dd>
             <span>{{article.deleteDate | date:'medium'}}</span>
         </dd>
+        <dt><span jhiTranslate="hopiestraWebSiteApp.article.adminTitle">Admin Title</span></dt>
+        <dd>
+            <span>{{article.adminTitle}}</span>
+        </dd>
         <dt><span jhiTranslate="hopiestraWebSiteApp.article.author">Author</span></dt>
         <dd>
             {{article.author?.login}}
