--- a/src/main/webapp/app/entities/international-article/international-article-dialog.component.html
+++ b/src/main/webapp/app/entities/international-article/international-article-dialog.component.html
@@ -58,7 +58,7 @@
             <label class="form-control-label" jhiTranslate="hopiestraWebSiteApp.internationalArticle.article" for="field_article">Article</label>
             <select class="form-control" id="field_article" name="article" [(ngModel)]="internationalArticle.article"  required>
                 <option *ngIf="!editForm.value.article" [ngValue]="null" selected></option>
-                <option [ngValue]="articleOption.id === internationalArticle.article?.id ? internationalArticle.article : articleOption" *ngFor="let articleOption of articles; trackBy: trackArticleById">{{articleOption.id}}</option>
+                <option [ngValue]="articleOption.id === internationalArticle.article?.id ? internationalArticle.article : articleOption" *ngFor="let articleOption of articles; trackBy: trackArticleById">{{articleOption.adminTitle}}</option>
             </select>
         </div>
         <div [hidden]="!(editForm.controls.article?.dirty && editForm.controls.article?.invalid)">
