--- a/src/main/webapp/app/entities/international-article/international-article.component.html
+++ b/src/main/webapp/app/entities/international-article/international-article.component.html
@@ -20,7 +20,7 @@
             <th jhiSortBy="title"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.title">Title</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="content"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.content">Content</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="language.name"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.language">Language</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="article.id"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.article">Article</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="article.adminTitle"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.article">Article</span> <span class="fa fa-sort"></span></th>
             <th></th>
             </tr>
             </thead>
@@ -36,7 +36,7 @@
                 </td>
                 <td>
                     <div *ngIf="internationalArticle.article">
-                        <a [routerLink]="['../article', internationalArticle.article?.id ]" >{{internationalArticle.article?.id}}</a>
+                        <a [routerLink]="['../article', internationalArticle.article?.id ]" >{{internationalArticle.article?.adminTitle}}</a>
                     </div>
                 </td>
                 <td class="text-right">
