--- a/src/main/webapp/app/entities/article/article.component.html
+++ b/src/main/webapp/app/entities/article/article.component.html
@@ -1,7 +1,9 @@
 <div>
     <h2>
         <span jhiTranslate="hopiestraWebSiteApp.article.home.title">Articles</span>
-        <button class="btn btn-primary float-right jh-create-entity create-article" [routerLink]="['/', { outlets: { popup: ['article-new'] } }]">
+        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                class="btn btn-primary float-right jh-create-entity create-article" 
+                [routerLink]="['/', { outlets: { popup: ['article-new'] } }]">
             <span class="fa fa-plus"></span>
             <span  jhiTranslate="hopiestraWebSiteApp.article.home.createLabel">
             Create new Article
@@ -58,7 +60,8 @@
                             <span class="fa fa-eye"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'article/'+ article.id + '/edit'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
@@ -66,7 +69,8 @@
                             <span class="fa fa-pencil"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'article/'+ article.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
