--- a/src/main/webapp/app/entities/international-article/international-article.component.html
+++ b/src/main/webapp/app/entities/international-article/international-article.component.html
@@ -1,7 +1,9 @@
 <div>
     <h2>
         <span jhiTranslate="hopiestraWebSiteApp.internationalArticle.home.title">International Articles</span>
-        <button class="btn btn-primary float-right jh-create-entity create-international-article" [routerLink]="['/', { outlets: { popup: ['international-article-new'] } }]">
+        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                class="btn btn-primary float-right jh-create-entity create-international-article" 
+                [routerLink]="['/', { outlets: { popup: ['international-article-new'] } }]">
             <span class="fa fa-plus"></span>
             <span  jhiTranslate="hopiestraWebSiteApp.internationalArticle.home.createLabel">
             Create new International Article
@@ -47,7 +49,8 @@
                             <span class="fa fa-eye"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'international-article/'+ internationalArticle.id + '/edit'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
@@ -55,7 +58,8 @@
                             <span class="fa fa-pencil"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'international-article/'+ internationalArticle.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
