--- a/src/main/webapp/app/entities/language/language.component.html
+++ b/src/main/webapp/app/entities/language/language.component.html
@@ -1,7 +1,9 @@
 <div>
     <h2>
         <span jhiTranslate="hopiestraWebSiteApp.language.home.title">Languages</span>
-        <button class="btn btn-primary float-right jh-create-entity create-language" [routerLink]="['/', { outlets: { popup: ['language-new'] } }]">
+        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" 
+                class="btn btn-primary float-right jh-create-entity create-language" 
+                [routerLink]="['/', { outlets: { popup: ['language-new'] } }]">
             <span class="fa fa-plus"></span>
             <span  jhiTranslate="hopiestraWebSiteApp.language.home.createLabel">
             Create new Language
@@ -35,7 +37,8 @@
                             <span class="fa fa-eye"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'language/'+ language.id + '/edit'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
@@ -43,7 +46,8 @@
                             <span class="fa fa-pencil"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'language/'+ language.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
