--- a/src/main/webapp/app/entities/tag/tag.component.html
+++ b/src/main/webapp/app/entities/tag/tag.component.html
@@ -1,7 +1,9 @@
 <div>
     <h2>
         <span jhiTranslate="hopiestraWebSiteApp.tag.home.title">Tags</span>
-        <button class="btn btn-primary float-right jh-create-entity create-tag" [routerLink]="['/', { outlets: { popup: ['tag-new'] } }]">
+        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" 
+                class="btn btn-primary float-right jh-create-entity create-tag" 
+                [routerLink]="['/', { outlets: { popup: ['tag-new'] } }]">
             <span class="fa fa-plus"></span>
             <span  jhiTranslate="hopiestraWebSiteApp.tag.home.createLabel">
             Create new Tag
@@ -33,7 +35,8 @@
                             <span class="fa fa-eye"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'tag/'+ tag.id + '/edit'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
@@ -41,7 +44,8 @@
                             <span class="fa fa-pencil"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'tag/'+ tag.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
