--- a/src/main/webapp/app/entities/theme/theme.component.html
+++ b/src/main/webapp/app/entities/theme/theme.component.html
@@ -1,7 +1,9 @@
 <div>
     <h2>
         <span jhiTranslate="hopiestraWebSiteApp.theme.home.title">Themes</span>
-        <button class="btn btn-primary float-right jh-create-entity create-theme" [routerLink]="['/', { outlets: { popup: ['theme-new'] } }]">
+        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                class="btn btn-primary float-right jh-create-entity create-theme" 
+                [routerLink]="['/', { outlets: { popup: ['theme-new'] } }]">
             <span class="fa fa-plus"></span>
             <span  jhiTranslate="hopiestraWebSiteApp.theme.home.createLabel">
             Create new Theme
@@ -48,7 +50,8 @@
                             <span class="fa fa-eye"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'theme/'+ theme.id + '/edit'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
@@ -56,7 +59,8 @@
                             <span class="fa fa-pencil"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'theme/'+ theme.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
