--- a/src/main/webapp/app/entities/international-article/international-article.component.html
+++ b/src/main/webapp/app/entities/international-article/international-article.component.html
@@ -1,9 +1,7 @@
 <div>
     <h2>
         <span jhiTranslate="hopiestraWebSiteApp.internationalArticle.home.title">International Articles</span>
-        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
-                class="btn btn-primary float-right jh-create-entity create-international-article" 
-                [routerLink]="['/', { outlets: { popup: ['international-article-new'] } }]">
+        <button class="btn btn-primary float-right jh-create-entity create-international-article" [routerLink]="['/', { outlets: { popup: ['international-article-new'] } }]">
             <span class="fa fa-plus"></span>
             <span  jhiTranslate="hopiestraWebSiteApp.internationalArticle.home.createLabel">
             Create new International Article
@@ -22,7 +20,7 @@
             <th jhiSortBy="title"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.title">Title</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="content"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.content">Content</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="language.name"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.language">Language</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="article.adminTitle"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.article">Article</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="article.id"><span jhiTranslate="hopiestraWebSiteApp.internationalArticle.article">Article</span> <span class="fa fa-sort"></span></th>
             <th></th>
             </tr>
             </thead>
@@ -38,7 +36,7 @@
                 </td>
                 <td>
                     <div *ngIf="internationalArticle.article">
-                        <a [routerLink]="['../article', internationalArticle.article?.id ]" >{{internationalArticle.article?.adminTitle}}</a>
+                        <a [routerLink]="['../article', internationalArticle.article?.id ]" >{{internationalArticle.article?.id}}</a>
                     </div>
                 </td>
                 <td class="text-right">
@@ -49,8 +47,7 @@
                             <span class="fa fa-eye"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
-                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
-                                type="submit"
+                        <button type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'international-article/'+ internationalArticle.id + '/edit'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
@@ -58,8 +55,7 @@
                             <span class="fa fa-pencil"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
-                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
-                                type="submit"
+                        <button type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'international-article/'+ internationalArticle.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
