--- a/src/main/webapp/app/entities/tag/tag.component.html
+++ b/src/main/webapp/app/entities/tag/tag.component.html
@@ -1,9 +1,7 @@
 <div>
     <h2>
         <span jhiTranslate="hopiestraWebSiteApp.tag.home.title">Tags</span>
-        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" 
-                class="btn btn-primary float-right jh-create-entity create-tag" 
-                [routerLink]="['/', { outlets: { popup: ['tag-new'] } }]">
+        <button class="btn btn-primary float-right jh-create-entity create-tag" [routerLink]="['/', { outlets: { popup: ['tag-new'] } }]">
             <span class="fa fa-plus"></span>
             <span  jhiTranslate="hopiestraWebSiteApp.tag.home.createLabel">
             Create new Tag
@@ -35,8 +33,7 @@
                             <span class="fa fa-eye"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
-                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
-                                type="submit"
+                        <button type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'tag/'+ tag.id + '/edit'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
@@ -44,8 +41,7 @@
                             <span class="fa fa-pencil"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
-                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
-                                type="submit"
+                        <button type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'tag/'+ tag.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
