feat(entity): ajout de l'international tag

--- a/src/main/webapp/app/entities/international-tag/international-tag.component.html
+++ b/src/main/webapp/app/entities/international-tag/international-tag.component.html
@@ -1,10 +1,10 @@
 <div>
     <h2>
-        <span jhiTranslate="hopiestraWebSiteApp.language.home.title">Languages</span>
-        <button class="btn btn-primary float-right jh-create-entity create-language" [routerLink]="['/', { outlets: { popup: ['language-new'] } }]">
+        <span jhiTranslate="hopiestraWebSiteApp.internationalTag.home.title">International Tags</span>
+        <button class="btn btn-primary float-right jh-create-entity create-international-tag" [routerLink]="['/', { outlets: { popup: ['international-tag-new'] } }]">
             <span class="fa fa-plus"></span>
-            <span  jhiTranslate="hopiestraWebSiteApp.language.home.createLabel">
-            Create new Language
+            <span  jhiTranslate="hopiestraWebSiteApp.internationalTag.home.createLabel">
+            Create new International Tag
             </span>
         </button>
     </h2>
@@ -12,31 +12,35 @@
     <div class="row">
     </div>
     <br/>
-    <div class="table-responsive" *ngIf="languages">
+    <div class="table-responsive" *ngIf="internationalTags">
         <table class="table table-striped">
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
             <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="name"><span jhiTranslate="hopiestraWebSiteApp.language.name">Name</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="code"><span jhiTranslate="hopiestraWebSiteApp.language.code">Code</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="title"><span jhiTranslate="hopiestraWebSiteApp.internationalTag.title">Title</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="language.name"><span jhiTranslate="hopiestraWebSiteApp.internationalTag.language">Language</span> <span class="fa fa-sort"></span></th>
             <th></th>
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let language of languages ;trackBy: trackId">
-                <td><a [routerLink]="['../language', language.id ]">{{language.id}}</a></td>
-                <td>{{language.name}}</td>
-                <td>{{language.code}}</td>
+            <tr *ngFor="let internationalTag of internationalTags ;trackBy: trackId">
+                <td><a [routerLink]="['../international-tag', internationalTag.id ]">{{internationalTag.id}}</a></td>
+                <td>{{internationalTag.title}}</td>
+                <td>
+                    <div *ngIf="internationalTag.language">
+                        <a [routerLink]="['../language', internationalTag.language?.id ]" >{{internationalTag.language?.name}}</a>
+                    </div>
+                </td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
-                                [routerLink]="['../language', language.id ]"
+                                [routerLink]="['../international-tag', internationalTag.id ]"
                                 class="btn btn-info btn-sm">
                             <span class="fa fa-eye"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
                         <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'language/'+ language.id + '/edit'} }]"
+                                [routerLink]="['/', { outlets: { popup: 'international-tag/'+ internationalTag.id + '/edit'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
                                 class="btn btn-primary btn-sm">
@@ -44,7 +48,7 @@
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
                         <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'language/'+ language.id + '/delete'} }]"
+                                [routerLink]="['/', { outlets: { popup: 'international-tag/'+ internationalTag.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
                                 class="btn btn-danger btn-sm">
@@ -57,7 +61,7 @@
             </tbody>
         </table>
     </div>
-    <div *ngIf="languages && languages.length">
+    <div *ngIf="internationalTags && internationalTags.length">
         <div class="row justify-content-center">
             <jhi-item-count [page]="page" [total]="queryCount" [maxSize]="5" [itemsPerPage]="itemsPerPage"></jhi-item-count>
         </div>
