--- a/src/main/webapp/app/entities/tag/tag-dialog.component.html
+++ b/src/main/webapp/app/entities/tag/tag-dialog.component.html
@@ -13,17 +13,23 @@
                    [(ngModel)]="tag.id" readonly />
         </div>
         <div class="form-group">
-            <label class="form-control-label" jhiTranslate="hopiestraWebSiteApp.tag.name" for="field_name">Name</label>
-            <input type="text" class="form-control" name="name" id="field_name"
-                [(ngModel)]="tag.name" required/>
-            <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
+            <label class="form-control-label" jhiTranslate="hopiestraWebSiteApp.tag.code" for="field_code">Code</label>
+            <input type="text" class="form-control" name="code" id="field_code"
+                [(ngModel)]="tag.code" required/>
+            <div [hidden]="!(editForm.controls.code?.dirty && editForm.controls.code?.invalid)">
                 <small class="form-text text-danger"
-                   [hidden]="!editForm.controls.name?.errors?.required" jhiTranslate="entity.validation.required">
+                   [hidden]="!editForm.controls.code?.errors?.required" jhiTranslate="entity.validation.required">
                    This field is required.
                 </small>
             </div>
         </div>
 
+        <div class="form-group">
+            <label jhiTranslate="hopiestraWebSiteApp.tag.internationalTags" for="field_internationalTags">International Tags</label>
+            <select class="form-control" id="field_internationalTags" multiple name="internationalTags" [(ngModel)]="tag.internationalTags">
+                <option [ngValue]="getSelected(tag.internationalTags, internationalTagOption)" *ngFor="let internationalTagOption of internationaltags; trackBy: trackInternationalTagById">{{internationalTagOption.id}}</option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
