--- a/src/main/webapp/app/entities/tag/tag-detail.component.html
+++ b/src/main/webapp/app/entities/tag/tag-detail.component.html
@@ -4,9 +4,15 @@
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="row-md jh-entity-details">
-        <dt><span jhiTranslate="hopiestraWebSiteApp.tag.name">Name</span></dt>
+        <dt><span jhiTranslate="hopiestraWebSiteApp.tag.code">Code</span></dt>
         <dd>
-            <span>{{tag.name}}</span>
+            <span>{{tag.code}}</span>
+        </dd>
+        <dt><span jhiTranslate="hopiestraWebSiteApp.tag.internationalTags">International Tags</span></dt>
+        <dd>
+            <span *ngFor="let internationalTags of tag.internationalTags; let last = last">
+                <a [routerLink]="['/international-tag', internationalTags?.id ]">{{internationalTags.id}}</a>{{last ? '' : ', '}}
+            </span>
         </dd>
     </dl>
 
