feat(article): ajout de froala sur le content des international article

--- a/src/main/webapp/content/css/vendor.css
+++ b/src/main/webapp/content/css/vendor.css
@@ -4,4 +4,5 @@
 @import '~froala-editor/css/froala_editor.pkgd.min.css';
 @import '~froala-editor/css/froala_style.min.css';
 
-@import './modal.css'
+@import './modal.css';
+@import './froala.css';
