--- a/src/main/webapp/app/entities/international-article/international-article-dialog.component.html
+++ b/src/main/webapp/app/entities/international-article/international-article-dialog.component.html
@@ -25,8 +25,9 @@
         </div>
         <div class="form-group">
             <label class="form-control-label" jhiTranslate="hopiestraWebSiteApp.internationalArticle.content" for="field_content">Content</label>
-            <textarea class="form-control" name="content" id="field_content"
-                [(ngModel)]="internationalArticle.content" required></textarea>
+            <div [froalaEditor] class="form-control" name="content" id="field_content"  [(ngModel)]="internationalArticle.content" required>
+                Hello, Froala!
+            </div>
             <div [hidden]="!(editForm.controls.content?.dirty && editForm.controls.content?.invalid)">
                 <small class="form-text text-danger"
                    [hidden]="!editForm.controls.content?.errors?.required" jhiTranslate="entity.validation.required">
