--- a/src/main/webapp/app/entities/theme/theme-detail.component.html
+++ b/src/main/webapp/app/entities/theme/theme-detail.component.html
@@ -4,19 +4,6 @@
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="row-md jh-entity-details">
-        <dt><span jhiTranslate="hopiestraWebSiteApp.theme.name">Name</span></dt>
-        <dd>
-            <span>{{theme.name}}</span>
-        </dd>
-        <dt><span jhiTranslate="hopiestraWebSiteApp.theme.backgroundPicture">Background Picture</span></dt>
-        <dd>
-            <div *ngIf="theme.backgroundPicture">
-                <a (click)="openFile(theme.backgroundPictureContentType, theme.backgroundPicture)">
-                    <img [src]="'data:' + theme.backgroundPictureContentType + ';base64,' + theme.backgroundPicture" style="max-width: 100%;" alt="theme image"/>
-                </a>
-                {{theme.backgroundPictureContentType}}, {{byteSize(theme.backgroundPicture)}}
-            </div>
-        </dd>
         <dt><span jhiTranslate="hopiestraWebSiteApp.theme.order">Order</span></dt>
         <dd>
             <span>{{theme.order}}</span>
@@ -25,6 +12,12 @@
         <dd>
             <div *ngIf="theme.parentTheme">
                 <a [routerLink]="['/theme', theme.parentTheme?.id]">{{theme.parentTheme?.name}}</a>
+            </div>
+        </dd>
+        <dt><span jhiTranslate="hopiestraWebSiteApp.theme.backgroundPicture">Background Picture</span></dt>
+        <dd>
+            <div *ngIf="theme.backgroundPicture">
+                <a [routerLink]="['/image', theme.backgroundPicture?.id]">{{theme.backgroundPicture?.name}}</a>
             </div>
         </dd>
     </dl>
