--- a/src/main/webapp/app/entities/theme/theme.component.html
+++ b/src/main/webapp/app/entities/theme/theme.component.html
@@ -1,9 +1,7 @@
 <div>
     <h2>
         <span jhiTranslate="hopiestraWebSiteApp.theme.home.title">Themes</span>
-        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
-                class="btn btn-primary float-right jh-create-entity create-theme" 
-                [routerLink]="['/', { outlets: { popup: ['theme-new'] } }]">
+        <button class="btn btn-primary float-right jh-create-entity create-theme" [routerLink]="['/', { outlets: { popup: ['theme-new'] } }]">
             <span class="fa fa-plus"></span>
             <span  jhiTranslate="hopiestraWebSiteApp.theme.home.createLabel">
             Create new Theme
@@ -19,27 +17,24 @@
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
             <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="name"><span jhiTranslate="hopiestraWebSiteApp.theme.name">Name</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="backgroundPicture"><span jhiTranslate="hopiestraWebSiteApp.theme.backgroundPicture">Background Picture</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="order"><span jhiTranslate="hopiestraWebSiteApp.theme.order">Order</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="parentTheme.name"><span jhiTranslate="hopiestraWebSiteApp.theme.parentTheme">Parent Theme</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="backgroundPicture.name"><span jhiTranslate="hopiestraWebSiteApp.theme.backgroundPicture">Background Picture</span> <span class="fa fa-sort"></span></th>
             <th></th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let theme of themes ;trackBy: trackId">
                 <td><a [routerLink]="['../theme', theme.id ]">{{theme.id}}</a></td>
-                <td>{{theme.name}}</td>
-                <td>
-                    <a *ngIf="theme.backgroundPicture" (click)="openFile(theme.backgroundPictureContentType, theme.backgroundPicture)">
-                        <img [src]="'data:' + theme.backgroundPictureContentType + ';base64,' + theme.backgroundPicture" style="max-height: 30px;" alt="theme image"/>
-                    </a>
-                    <span *ngIf="theme.backgroundPicture">{{theme.backgroundPictureContentType}}, {{byteSize(theme.backgroundPicture)}}</span>
-                </td>
                 <td>{{theme.order}}</td>
                 <td>
                     <div *ngIf="theme.parentTheme">
                         <a [routerLink]="['../theme', theme.parentTheme?.id ]" >{{theme.parentTheme?.name}}</a>
+                    </div>
+                </td>
+                <td>
+                    <div *ngIf="theme.backgroundPicture">
+                        <a [routerLink]="['../image', theme.backgroundPicture?.id ]" >{{theme.backgroundPicture?.name}}</a>
                     </div>
                 </td>
                 <td class="text-right">
@@ -50,8 +45,7 @@
                             <span class="fa fa-eye"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
-                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
-                                type="submit"
+                        <button type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'theme/'+ theme.id + '/edit'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
@@ -59,8 +53,7 @@
                             <span class="fa fa-pencil"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
-                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
-                                type="submit"
+                        <button type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'theme/'+ theme.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
