--- a/src/main/webapp/app/entities/article/article.component.html
+++ b/src/main/webapp/app/entities/article/article.component.html
@@ -17,7 +17,6 @@
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
             <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="backgroundPicture"><span jhiTranslate="hopiestraWebSiteApp.article.backgroundPicture">Background Picture</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="publicationDate"><span jhiTranslate="hopiestraWebSiteApp.article.publicationDate">Publication Date</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="updateDate"><span jhiTranslate="hopiestraWebSiteApp.article.updateDate">Update Date</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="creationDate"><span jhiTranslate="hopiestraWebSiteApp.article.creationDate">Creation Date</span> <span class="fa fa-sort"></span></th>
@@ -25,18 +24,13 @@
             <th jhiSortBy="adminTitle"><span jhiTranslate="hopiestraWebSiteApp.article.adminTitle">Admin Title</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="author.login"><span jhiTranslate="hopiestraWebSiteApp.article.author">Author</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="theme.name"><span jhiTranslate="hopiestraWebSiteApp.article.theme">Theme</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="backgroundPicture.name"><span jhiTranslate="hopiestraWebSiteApp.article.backgroundPicture">Background Picture</span> <span class="fa fa-sort"></span></th>
             <th></th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let article of articles ;trackBy: trackId">
                 <td><a [routerLink]="['../article', article.id ]">{{article.id}}</a></td>
-                <td>
-                    <a *ngIf="article.backgroundPicture" (click)="openFile(article.backgroundPictureContentType, article.backgroundPicture)">
-                        <img [src]="'data:' + article.backgroundPictureContentType + ';base64,' + article.backgroundPicture" style="max-height: 30px;" alt="article image"/>
-                    </a>
-                    <span *ngIf="article.backgroundPicture">{{article.backgroundPictureContentType}}, {{byteSize(article.backgroundPicture)}}</span>
-                </td>
                 <td>{{article.publicationDate | date:'medium'}}</td>
                 <td>{{article.updateDate | date:'medium'}}</td>
                 <td>{{article.creationDate | date:'medium'}}</td>
@@ -48,6 +42,11 @@
                 <td>
                     <div *ngIf="article.theme">
                         <a [routerLink]="['../theme', article.theme?.id ]" >{{article.theme?.name}}</a>
+                    </div>
+                </td>
+                <td>
+                    <div *ngIf="article.backgroundPicture">
+                        <a [routerLink]="['../image', article.backgroundPicture?.id ]" >{{article.backgroundPicture?.name}}</a>
                     </div>
                 </td>
                 <td class="text-right">
